# django_template2

./: .gitignore  Dockerfile  deployment.yaml  pyproject.toml
apps/account/: backends.py  consts.py  models.py  serializers.py  urls.py  views.py
apps/common/: consts.py
db/: router.py
deploy/base/web/: deployment.yaml  kustomization.yaml  limit_range.yaml  service.yaml
deploy/overlays/prod/: ingress.yaml  kustomization.yaml
django_template/: asgi.py  consts.py  settings.py  urls.py  wsgi.py
django_template/celery/: __init__.py
django_template/drf/: __init__.py  authentication.py  exceptions.py  models.py  pagination.py  renders.py
helper/: apple.py  sms.py  uploader.py  we_chat.py
utils/: crypt.py  datetimex.py  redisx.py  tools.py
